--- a/clustering/templates/clustering/clustering.html
+++ b/clustering/templates/clustering/clustering.html
@@ -22,7 +22,21 @@
                 </div>
             </div>
         {% endif %}
-        {% if is_visible %}
+        {% if is_visible%}
+            {% if form.errors and not_show is null %}
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ field.name }}: {{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endif %}
              <div class="form-row mb-3">
                 <div class="col-md-1 mb-3">
                   <label for="k">k</label>
